# serde-jupyter

./: Cargo.toml
src/structures/: de.rs  mod.rs  ser.rs
tests/de/: ijulia.json  iruby.json  mod.rs
