[package]
name = "sub_projects"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "..."
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json="1.0"

[dev-dependencies]

[features]
default = []
